--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Data, ora, prognoza și player YouTube</title>
+<title>Chrome</title>
 <style>
   :root {
     --bg: #121212;
@@ -27,17 +27,27 @@
     width: 350px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.5);
     text-align: center;
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 0.6s forwards;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+  }
+  .card:hover {
+    box-shadow: 0 15px 40px rgba(79, 195, 247, 0.7);
+    transform: translateY(-5px);
   }
   .day {
     font-size: 1.8rem;
     font-weight: 700;
     color: var(--accent);
     margin-bottom: 0.5rem;
+    transition: color 0.3s ease;
   }
   .date, .time, .weather-info {
     font-size: 1.1rem;
     color: var(--text-secondary);
     margin-bottom: 0.3rem;
+    transition: color 0.3s ease;
   }
   #player-input {
     width: 100%;
@@ -46,37 +56,49 @@
     border: none;
     font-size: 1rem;
     margin-bottom: 1rem;
+    transition: box-shadow 0.3s ease;
+  }
+  #player-input:focus {
+    outline: none;
+    box-shadow: 0 0 10px var(--accent);
   }
   iframe {
     width: 100%;
     height: 200px;
     border-radius: 1rem;
     border: none;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+  iframe.visible {
+    opacity: 1;
+  }
+
+  @keyframes fadeInUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
 </style>
 </head>
 <body>
 
-  <!-- Card fusuri orare -->
   <div id="time-cards" style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; max-width: 1100px;">
-    <!-- card-urile se generează din JS -->
   </div>
 
-  <!-- Card player YouTube -->
-  <div class="card">
+  <div class="card" style="animation-delay: 0.5s;">
     <div class="day">Player YouTube</div>
     <input id="player-input" type="text" placeholder="Introdu link YouTube aici" />
     <iframe id="yt-player" src="" allowfullscreen></iframe>
   </div>
 
-  <!-- Card prognoza meteo -->
-  <div class="card" id="weather">
+  <div class="card" id="weather" style="animation-delay: 1s;">
     <div class="day">Prognoză meteo București</div>
     <div id="weather-info">Se încarcă...</div>
   </div>
 
 <script>
-  // Fusuri orare și date în limba locală
   const zones = [
     { city: "București", tz: "Europe/Bucharest", lang: "ro-RO" },
     { city: "New York", tz: "America/New_York", lang: "en-US" },
@@ -89,7 +111,7 @@
 
   function updateTimeCards() {
     timeCardsContainer.innerHTML = "";
-    zones.forEach(({city, tz, lang}) => {
+    zones.forEach(({city, tz, lang}, i) => {
       const now = new Date();
       const day = new Intl.DateTimeFormat(lang, { weekday: 'long', timeZone: tz }).format(now);
       const date = new Intl.DateTimeFormat(lang, { day: 'numeric', month: 'long', year: 'numeric', timeZone: tz }).format(now);
@@ -97,6 +119,7 @@
 
       const card = document.createElement("div");
       card.className = "card";
+      card.style.animationDelay = `${i * 0.2}s`;
       card.innerHTML = `
         <div class="day">${city}: ${day.charAt(0).toUpperCase() + day.slice(1)}</div>
         <div class="date">${date}</div>
@@ -108,25 +131,24 @@
   setInterval(updateTimeCards, 1000);
   updateTimeCards();
 
-  // Player YouTube embed
   const input = document.getElementById("player-input");
   const iframe = document.getElementById("yt-player");
 
   input.addEventListener("change", () => {
     const url = input.value.trim();
-    // extrage ID video din link YouTube
     const videoIdMatch = url.match(/(?:v=|youtu\.be\/)([a-zA-Z0-9_-]{11})/);
     if(videoIdMatch) {
       const videoId = videoIdMatch[1];
       iframe.src = `https://www.youtube.com/embed/${videoId}`;
+      iframe.classList.add("visible");
     } else {
       iframe.src = "";
+      iframe.classList.remove("visible");
       alert("Link YouTube invalid!");
     }
   });
 
-  // Prognoza meteo București - OpenWeatherMap
-  const apiKey = 'CHEIA_TA_API_AICI'; // pune cheia ta API aici
+  const apiKey = 'CHEIA_TA_API_AICI'; 
   const city = 'Bucharest';
   const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&lang=ro&appid=${apiKey}`;
 
