--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   });
 
   // Prognoza meteo București - OpenWeatherMap
-  const apiKey = 'CHEIA_TA_API_AICI'; // pune cheia ta API aici
+  const apiKey = '4ffd94302424b2f19522ebdc8e01baf6'; // pune cheia ta API aici
   const city = 'Bucharest';
   const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&lang=ro&appid=${apiKey}`;
 
