--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Data, ora, prognoza și player YouTube animat</title>
+<title>Data, ora, prognoza</title>
 <style>
   :root {
     --bg: #121212;
@@ -109,10 +109,6 @@
 <script>
   const zones = [
     { city: "București", tz: "Europe/Bucharest", lang: "ro-RO" },
-    { city: "New York", tz: "America/New_York", lang: "en-US" },
-    { city: "Tokyo", tz: "Asia/Tokyo", lang: "ja-JP" },
-    { city: "London", tz: "Europe/London", lang: "en-GB" },
-    { city: "Paris", tz: "Europe/Paris", lang: "fr-FR" },
   ];
 
   const timeCardsContainer = document.getElementById("time-cards");
